2005-07-09 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/messagequeue.cc (message_queue_base c'tor): Added
	  check for null false root, used `/' instead.

	* reroot/libreroot/messagequeue.h: Added function for obtaining a
	  message queue.

	* reroot/libreroot/libc.cc, reroot/libreroot/libc.h: Added wrappers for
	  `realloc'.  Restored __attribute__ ((malloc)).

	* reroot/packet.h: Renamed to message.h.
	* reroot/message.h: Added `reroot::message'.
	* reroot/libreroot/messagequeue.cc: Added functions for splitting
	  messages into packets & sending them, & receiving packets &
	  concatenating them into messages.

2005-07-08 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/xmessage.cc, reroot/libreroot/xmessage.h: Added.
	* reroot/libreroot/messagequeue.cc, reroot/libreroot/messagequeue.h:
	  Added.

	* reroot/packet.h: Removed C compatibility code, moved into namespace
	  `reroot'.  Currently this breaks rerootd build until I get round to
	  updating it.  Minor bugs fixed.

2005-07-07 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/Makefile: Defined LIBREROOT in CPPFLAGS.
	* reroot/rerootd/Makefile: Defined REROOTD in CPPFLAGS.

2005-07-06 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/filename.cc, reroot/libreroot/filename.h: Reorganized
	  & improved interface to `filename' class.

	* reroot/libreroot/filename.cc (add_working_directory): Use `getcwd'
	  function.

	* reroot/libreroot/libc.cc, reroot/libreroot/libc.h: Added `malloc'
	  wrapper function.

	* reroot/libreroot/libc.cc, reroot/libreroot/libc.h: Added current
	  working directory functions.
	* reroot/libreroot/filesystem.cc: Renamed to cwd.cc.
	* reroot/libreroot/cwd.cc: Added overrides for getting current working
	  directory, & place-holder stubs for setting it.

2005-07-06 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/zlib.pkg: Added fix for recent zlib vulnerability.
